@@ -1,12 +1,13 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="rkward" version="51">
+<kpartgui name="rkward" version="53">
 	<MenuBar>
 		<Menu name="edit"><text>&amp;Edit</text>
-			<Action name="rkconsole_copy"></Action>
-			<Action name="rkconsole_copy_literal"></Action>
-			<Action name="rkconsole_paste"></Action>
+			<Action name="rkconsole_copy" group="edit_paste_merge"/>
+			<Action name="rkconsole_copy_literal" group="edit_paste_merge"/>
+			<Action name="rkconsole_paste" group="edit_paste_merge"/>
+			<DefineGroup name="edit_paste_merge" append="edit_paste_merge"/>
 			<Separator/>
-			<Action name="rkconsole_clear"></Action>
+			<Action name="rkconsole_clear"/>
 		</Menu>
 		<Menu name="run"><text>&amp;Run</text>
 			<Action name="interrupt" group="postrun_actions_merge"/>
@@ -19,17 +20,18 @@
 		<Action name="interrupt" group="postrun_actions_merge"/>
 	</ToolBar>
 	<Menu name="rkconsole_context_menu">
-		<Action name="rkconsole_copy"></Action>
-		<Action name="rkconsole_copy_literal"></Action>
-		<Action name="rkconsole_paste"></Action>
+		<Action name="rkconsole_copy"/>
+		<Action name="rkconsole_copy_literal"/>
+		<Action name="rkconsole_paste"/>
+		<DefineGroup name="edit_paste_merge" />
 		<Separator/>
-		<DefineGroup name="rkconsole_context_merge1" append="rkconsole_context_merge1"/>
-		<Action name="interrupt"></Action>
+		<DefineGroup name="rkconsole_context_merge1"/>
+		<Action name="interrupt"/>
 		<Separator/>
-		<DefineGroup name="rkconsole_context_merge2" append="rkconsole_context_merge2"/>
+		<DefineGroup name="rkconsole_context_merge2"/>
 		<Separator/>
-		<Action name="rkconsole_clear"></Action>
+		<Action name="rkconsole_clear"/>
 		<Separator/>
-		<Action name="rkconsole_configure"></Action>
+		<Action name="rkconsole_configure"/>
 	</Menu>
 </kpartgui>
